# hackUPC2026-dead-mans-switch

./: .gitignore  README.md  demo-script.md  local.properties  package-lock.json  package.json  solana_playground_code.md
app/: App.js  app.json  crash.txt  metro.config.js  package-lock.json  package.json
app/.expo/: settings.json
app/android/: gradle.properties
app/android/app/: build.gradle
app/assets/: idl.json
app/bare/: worker.bundle.js  worker.js
app/components/: AppIcon.js  BridgeBanner.js  Button.js  Card.js  CountdownRing.js  Field.js  GuardianGraph.js  Header.js  StatusPill.js  StepIndicator.js
app/screens/: DevTestScreen.js  ModeSelectScreen.js
app/screens/guardian/: EstateUnlockedScreen.js  GuardianAcceptingScreen.js  GuardianDashboardScreen.js  GuardianOnboardingScreen.js  ReconstructionScreen.js
app/services/: bare-bridge.js  clock.js  config.js  protocol.android.js  protocol.js  solana.js  store.js
app/theme/: colors.js  index.js  typography.js
bridge/: server.js
core/: crypto.js  identity.js  index.js  shamir.js
mock-lit/: mpc_node.py  requirements.txt
net/: heartbeat.js  index.js  invite.js  reconstruction.js  transport.js
protocol/: CONTRACTS.md  schemas.js
scripts/: bundle-worker.js  heartbeat-owner.js  heartbeat-watcher.js  reconstruct.js  shard-handoff.js
solana/: Anchor.toml
solana/programs/dead_mans_switch/: Cargo.toml
solana/programs/dead_mans_switch/src/: lib.rs
solana/tests/: dead_mans_switch.ts
storage/: clock.js  drive.js  index.js  state.js
test/: crypto.test.js
(+14 files in other folders)
